# LAr2324

./: CMakeLists.txt  Diffusion_Calc.py  Geom.txt  GetData.py  LabNotebook.html  LabelTempTestF.ipynb  TPC.cc  TPC.geo  TPC.sif  capacitor_2d.msh  capacitor_data_2d.txt  capacitor_vh_2d.txt  notes.txt  serial.py
FreeFEM/: 3_10.edp  3_10recent.edp  4-2-24.edp  FINALWORK.edp  Generate_script.py  ITWORKS.edp  TPC.edp  TPCall.edp  recent.edp  test2.edp
FreeFEM/4_17/: note.txt
FreeFEM/folder/: capacitor_field.csv  capacitor_potential.txt  capacitor_vh.txt
FreeFEM/matlab/: TPC.m  TPC_data.txt  TPC_mesh.msh  coord.txt
FreeFEM/test/: fullfrompython.edp  new.edp  pythongenerated.edp
PressureGauge/: Hornet.py  Pressurelog.csv  ReadPressure.ipynb  Test.py  logP.py  serial.py
Purity/: 8disp.py  QThread_2.py  Qthread_1.py  Serial_Tuple.py  final.py  purifier.py  serialplot.py  testtt.py
TempMonitor/: GUI.py  LabelTemp.ipynb  TempDisp.ipynb  dynamic2.py  eee.py  fakedata.ipynb  readbits.py  tempdisp.py
Thermal/: Try.edp  example.edp  first.edp
